--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>ayonima</h1>
+    <h1>Latihan Github</h1>
+    <img src="https://www.oto.com/motor-baru/bmw/s-1000-rr.jpg" alt="motor resing"
     
 </body>
 </html>l
