--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Latihan Github</h1>
-    <img src="https://www.oto.com/motor-baru/bmw/s-1000-rr.jpg" alt="motor resing"
-    
+    <img src="C:\Users\USER\Downloads\cbr.jpg" alt="aib" width="800" height="400">
+     
 </body>
 </html>l
