--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
 </head>
 <body>
     <h1>Latihan Github</h1>
-    <img src="C:\Users\USER\Downloads\cbr.jpg" alt="aib" width="800" height="400">
-     
+    <p>Ini CBR 1000RR</p>
+    <img src="C:\Users\USER\Downloads\cbr.jpg" width="800" height="400">
+
+    <p>Ini adalah motor Oliver hadiah ulang tahun dari bapaknya motor ini mempunyai 4 silinder dan 998 cc harga motor ini sangat murah hanya 1 miliyar</p>
+    <p>Jurusan TKJ untuk coding dan progreming</p>
+
+    <img src="C:\Users\USER\Downloads\mulet kepelet.jpg" width="400" height="200">
 </body>
-</html>l
+</html>
