--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ind">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,13 +7,22 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Latihan Github</h1>
+    <h1>Latihan 1<h1>
+        <img src="C:\Users\USER\Downloads\Kratos-God-of-War_1.jpg" width="1000" height="500">
+        <h2>Flevianus Malvin</h2>
+        <p>Jurusan : TKJ </p>
+        <p>Sosmed : <br> -WhatsApp <br> -Instagram <br> -TikTok</p>
+    
+    <h3>Latihan Github</h3>
     <p>Ini CBR 1000RR</p>
     <img src="C:\Users\USER\Downloads\cbr.jpg" width="800" height="400">
 
-    <p>Ini adalah motor Oliver hadiah ulang tahun dari bapaknya motor ini mempunyai 4 silinder dan 998 cc harga motor ini sangat murah hanya 1 miliyar</p>
-    <p>Jurusan TKJ untuk coding dan progreming</p>
+    <p>motor ini mempunyai mesin 4 tak, 4 silinder dan 998 cc harga motor ini sangat murah hanya 1 miliyar</p>
+
 
     <img src="C:\Users\USER\Downloads\mulet kepelet.jpg" width="400" height="200">
+    <p>mulet pasti kepelet</p>
+
+    
 </body>
 </html>
